--- a/sherine_foo/week_04/day_05/movies/views/layout.erb
+++ b/sherine_foo/week_04/day_05/movies/views/layout.erb
@@ -5,11 +5,9 @@
     <title>Movies</title>
     <link rel="stylesheet" href="/css/master.css">
     <style>
-    @import url('https://fonts.googleapis.com/css?family=Monoton|Paytone+One|Varela+Round');
+    @import url('https://fonts.googleapis.com/css?family=Monoton|Paytone+One|Varela+Round|Abril+Fatface|Chela+One|Lobster');
     </style>
-    <style>
-    @import url('https://fonts.googleapis.com/css?family=Abril+Fatface|Chela+One|Lobster');
-    </style>
+
   </head>
   <body>
 
