--- a/misael_mercado/week_04/day_05/writers_ar/views/writers_new.erb
+++ b/misael_mercado/week_04/day_05/writers_ar/views/writers_new.erb
@@ -6,7 +6,7 @@
   <label>Name:</label>
   <input type="text" name="name" placeholder="Writer's name" required autofocus>
   <label>Life:</label>
-  <input type="text" name="Life" placeholder="Life span" required>
+  <input type="text" name="life" placeholder="Life span" required>
   <label>Image:</label>
   <input type="url" name="image" placeholder="http://...">
 
