--- a/misael_mercado/week_04/day_05/writers_ar/views/drinks_new.erb
+++ b/misael_mercado/week_04/day_05/writers_ar/views/drinks_new.erb
@@ -6,7 +6,7 @@
   <label>Name:</label>
   <input type="text" name="name" placeholder="Drink name" required autofocus>
   <label>Recipe:</label>
-  <input type="text" name="name" placeholder="Drink recipe" required autofocus>
+  <input type="text" name="recipe" placeholder="Drink recipe" required autofocus>
   <label>Image:</label>
   <input type="url" name="image" placeholder="http://...">
 
