--- a/tom_quant/week_04/day_05/tech/views/brands_edit.erb
+++ b/tom_quant/week_04/day_05/tech/views/brands_edit.erb
@@ -8,7 +8,8 @@
 <label >logo</label>
 <input type="text" name="logo" value="<%=@brands['logo']%>">
 
-
+<label >Notes</label>
+<input type="text" name="notes" value="<%=@brands['notes']%>">
 
 <button>Submit</button>
 
