--- a/tom_quant/week_04/day_05/tech/views/brands_index.erb
+++ b/tom_quant/week_04/day_05/tech/views/brands_index.erb
@@ -9,6 +9,16 @@
 
 
 <% end%>
-
 </ul>
-<a href="/brands/new">NEW</a>
+
+
+<div class="container2">
+
+<% @brands.each do |brands|%>
+<div class="box2">
+
+
+  <a href="/brands/<%= brands['id']%>"><img src="<%= brands['logo']%>"></a>
+
+</div>
+<%end %>
