--- a/tom_quant/week_04/day_05/tech/views/brands_new.erb
+++ b/tom_quant/week_04/day_05/tech/views/brands_new.erb
@@ -8,6 +8,9 @@
 <label >Logo</label>
 <input type="text" name="logo" >
 
+<label >Notes</label>
+<input type="text" name="notes" >
+
 
 <button>Create</button>
 
