--- a/tom_quant/week_04/day_05/tech/public/css/master.css
+++ b/tom_quant/week_04/day_05/tech/public/css/master.css
@@ -1,26 +1,94 @@
+body {
+  background-color: #f5f5f5;
+  font-family: 'Muli', sans-serif;
+}
+
+#main_title {
+  display: inline-block;
+  font-size: 40px;
+  font-weight: 400;
+  margin: 10px;
+}
+
+span {
+  font-weight: 700;
+  font-size: 50px;
+}
+
+
 .container {
   margin: 0 auto;
   width: 60vw;
+  background-color: #f5f5f5;
 }
+
+a {
+  text-decoration: none;
+  color: black;
+}
+a:hover {
+  font-weight: 700;
+}
+
 
 .container1 {
+  position: relative;
+  top: 300px;
+  display: grid;
+  grid-template-columns: 25% 25% 25% 25%;
+background-color: white;
+margin-top: 50px;
+margin-bottom: 10px;
+}
+
+.container2 {
   display: grid;
   grid-template-columns: 50% 50%;
-
-  margin-top: 5vw;
-
+background-color: white;
+margin-top: 30px;
+margin-bottom: 30px;
 }
+
+.box img {
+  width: 100%;
+  height: 100px;
+}
+.box2 img {
+  width: 80%;
+}
+.box2{
+  margin: auto;
+}
+input {
+  display: block;
+}
+label {
+  display: block;
+}
+
+
+.bottom{
+  height: 400px;
+  width: 100%;
+}
+.top{
+  height: 400px;
+  width: 100%;
+}
+
 
 .box {
-  margin: 0 auto;
+  margin: 40px auto 0px auto;
 }
 .title {
-  margin-left: 20vw;
+  width: 60vw;
+  margin: 0 auto 3px auto;
 }
 
 nav {
   width: 60vw;
     margin: 0 auto;
+    height: 25px;
 }
 
 
@@ -28,12 +96,13 @@ nav ul {
  margin: 0;
  padding: 5px;
  list-style-type: none;
-
+height: 25px;
  background-color: #000;
  }
 
 nav ul li {
  display: inline;
+height: 25px;
  }
 
 nav ul li a {
@@ -41,6 +110,8 @@ nav ul li a {
  padding: .2em 2em;
  color: #fff;
  background-color: #000;
+ line-height: 25px;
+
  }
 
 nav ul li a:hover {
@@ -48,7 +119,9 @@ nav ul li a:hover {
  background-color: #fff;
  }
 
-
+.container3 {
+  margin-bottom: 50px;
+}
  .dropbtn {
   background-color: #000;
     color: white;
@@ -78,9 +151,11 @@ nav ul li a:hover {
     padding: 12px 16px;
     text-decoration: none;
     display: block;
+    background-color: white;
 }
 
 .dropdown-content a:hover {
+
   background-color: #f1f1f1;
 }
 
@@ -91,4 +166,74 @@ nav ul li a:hover {
 .dropdown:hover .dropbtn {
     background-color: white;
     color: black;
+}
+
+#headphonesimg {
+  height: 70px;
+  width: 70px;
+  float: right;
+}
+
+
+.section {
+  position: relative;
+}
+
+.section img {
+	position: absolute;
+}
+
+.top {
+	animation-name: fade;
+	animation-timing-function: ease-in-out;
+	animation-iteration-count: infinite;
+	animation-duration: 5s;
+	animation-direction: alternate;
+}
+
+@keyframes fade {
+	0% {
+		opacity: 1;
+	}
+	25% {
+		opacity: 1;
+	}
+	75% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 0;
+	}
+}
+
+footer {
+   position: fixed;
+   left: 0;
+   bottom: 0;
+   width: 60%;
+   margin-left: 20%;
+   background-color: #e2dfdf57;
+   color: black;
+   text-align: center;
+}
+.btn {
+  background: #d1d1d1;
+  background-image: -webkit-linear-gradient(top, #d1d1d1, #b0b0b0);
+  background-image: -moz-linear-gradient(top, #d1d1d1, #b0b0b0);
+  background-image: -ms-linear-gradient(top, #d1d1d1, #b0b0b0);
+  background-image: -o-linear-gradient(top, #d1d1d1, #b0b0b0);
+  background-image: linear-gradient(to bottom, #d1d1d1, #b0b0b0);
+  -webkit-border-radius: 4;
+  -moz-border-radius: 4;
+  border-radius: 4px;
+
+  color:black;
+  font-size: 20px;
+  padding: 4px 10px 4px 10px;
+  text-decoration: none;
+}
+
+.btn:hover {
+  background: #454545;
+  text-decoration: none;
 }
