--- a/tom_quant/week_04/day_05/tech/views/brands_show.erb
+++ b/tom_quant/week_04/day_05/tech/views/brands_show.erb
@@ -4,7 +4,10 @@
 <h2><%= @brands.name%></h2>
 
 <img src="<%= @brands.logo%>" alt="">
+<p><%=@brands.notes%></p>
 
+<a href="/brands/<%=@brands["id"]%>/edit">EDIT BRAND</a>
+<a href="/brands/<%=@brands["id"]%>/delete">DELETE BRAND</a>
 
 <% unless @brands.earphones.empty? %>
   <h2>Earphones:</h2>
@@ -19,12 +22,5 @@
   </ul>
 <% end %>
 
-
-
-
-
-
-
-<a href="/brands/<%=@brands["id"]%>/edit">EDIT BRAND</a>
-
-<a href="/brands/<%=@brands["id"]%>/delete">DELETE BRAND</a>
+<a href="/brands/<%=@brands["id"]%>/edit" class='btn'>EDIT</a>
+<a href="/brands/<%=@brands["id"]%>/delete" class='btn'>DELETE</a>
