--- a/tom_quant/week_04/day_05/tech/views/earphones_show.erb
+++ b/tom_quant/week_04/day_05/tech/views/earphones_show.erb
@@ -1,21 +1,24 @@
 
 
-<% unless @earphones.brands.nil? %>
-<h2><%= @earphones['name']%></h2>
 
-<h3>Price: $<%= @earphones['price']%></h3>
-<h2>Brand: <a href="/brands/<%=@earphones.brands.id%>"><%= @earphones.brands.name%></a></h2>
+ <div class="container3">
+   <% unless @earphones.brands.nil? %>
+   <h2><%= @earphones['name']%></h2>
 
-
-
-<img src="<%= @earphones['image']%>" alt="">
-
-<h2><%= @earphones['noise_cancelling']%></h2>
-<h4><%= @earphones['notes']%></h4>
+   <h3>Price: $<%= @earphones['price']%></h3>
+   <h2>Brand: <a href="/brands/<%=@earphones.brands.id%>"><%= @earphones.brands.name%></a></h2>
 
 
-<% end %>
+
+   <img src="<%= @earphones['image']%>" alt="">
+
+   <h2><%= @earphones['noise_cancelling']%></h2>
+   <h4><%= @earphones['notes']%></h4>
 
 
-<a href="/earphones/<%=@earphones["id"]%>/edit">EDIT</a>
-<a href="/earphones/<%=@earphones["id"]%>/delete">DELETE</a>
+   <% end %>
+
+
+   <a href="/earphones/<%=@earphones["id"]%>/edit" class='btn'>EDIT</a>
+   <a href="/earphones/<%=@earphones["id"]%>/delete" class='btn'>DELETE</a>
+ </div>
