update for commit

--- a/sherine_foo/week_04/day_03/booksI/views/cover.erb
+++ b/sherine_foo/week_04/day_03/booksI/views/cover.erb
@@ -1,11 +1,15 @@
 <p>
 
 <strong>
-  <%= @title %>
+    <%= @title %>
 </strong>
 
 <div class="book_img">
-  <img src=<%= @cover%>>
+  <img src = <%= @cover%> >
+  <%= @subtitle%>
+  <%= @author %>
+
+
 </div>
 
 </p>
