--- a/sherine_foo/week_04/day_05/movies/public/css/master.css
+++ b/sherine_foo/week_04/day_05/movies/public/css/master.css
@@ -57,12 +57,14 @@ img.feature {
   display:block;
   max-width: 100%;
   margin: 0 auto;
-  width: 25em;
+  width: 2em;
 }
 
 .all_image {
   width: 10em;
-  tex
+  text-align: center;
+  height: 15em;
+  background-color: #222;
 }
 
 form {
