--- a/sherine_foo/week_04/day_03/booksI/public/css/master.css
+++ b/sherine_foo/week_04/day_03/booksI/public/css/master.css
@@ -37,17 +37,18 @@ button {
   margin: 1em;
 }
 
-/* .container {
+.container {
   max-width: 960px;
-  margin: auto;
-  background-color: rgba(255, 255, 0, 0.3);
+  margin: 0 auto;
   padding: 1em;
-} */
+}
 
 
 p {
   align-items: center;
   margin: auto;
+  font-family: 'Paytone One', sans-serif;
+  font-size: 1vw;
 }
 
 strong {
@@ -59,5 +60,11 @@ align-items: center;
 
 img {
   width: 18vw;
-  align-items: center;
+  margin: 0 auto;
+  display: inline-block;
+}
+
+.book_img {
+  margin: 0 auto;
+  display: inline-block;
 }
