--- a/shelley_zhang/week_05/day_01/games_on_rails/app/views/rockpaperscissors/info.html.erb
+++ b/shelley_zhang/week_05/day_01/games_on_rails/app/views/rockpaperscissors/info.html.erb
@@ -1,7 +1,7 @@
 <h1>You didn't guess correctly :(</h1>
-<p>The random number is:
-<%= @random_number %>
+<p>The computer play is:
+<%= @computer_play %>
 </p>
-<p>Your answer is:
+<p>Your play was:
 <%= @userinput %>
 </p>
