Update Secret Number to remember number between attempts

--- a/tim_caldwell/week_05/day_01/Games_On_Rails/app/views/games/secret.html.erb
+++ b/tim_caldwell/week_05/day_01/Games_On_Rails/app/views/games/secret.html.erb
@@ -6,7 +6,8 @@
     <h2>Sorry, you guessed <%= params[:g] %> but that's not the number!</h2>
   <% end %>
 <% end %>
-<%= form_tag("/secret_n", method: "get") do %>
+<%= form_tag("/secret_n", method: "post") do %>
+  <input name="n" type="hidden" value="<%= @num %>">
   <% (1..10).to_a.each do |n| %>
   <button class="guess" name="g" value="<%= n %>"><%= n %></button>
   <% end %>
