updated routes and scss

--- a/misael_mercado/week_05/day_02/minerals/app/views/rocks/edit.html.erb
+++ b/misael_mercado/week_05/day_02/minerals/app/views/rocks/edit.html.erb
@@ -13,5 +13,5 @@
   <input type="number" name="composition" step=any value="<%= @rock.composition%>">
   <label>Locality:</label>
   <input type="text" name="locality" value="<%= @rock.locality %>">
-  <button>Add Rock</button>
+  <button class="btn">Add Rock</button>
 </form>
