--- a/misael_mercado/week_05/day_02/minerals/app/assets/stylesheets/master.scss
+++ b/misael_mercado/week_05/day_02/minerals/app/assets/stylesheets/master.scss
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css?family=Frank+Ruhl+Libre');
+
+
 table {
   font-family: 'Arial';
   margin: 25px auto;
@@ -64,5 +67,64 @@ ul {
 .title {
   display: flex;
   justify-content: center;
-  
+  font-family: 'Frank Ruhl Libre', serif;
+
+}
+.content {
+ display: flex;
+ justify-content: center;
+  a {
+    color: #333;
+    text-decoration: none;
+    &:hover {
+      opacity: 0.5;
+    }
+  }
+}
+
+.feature {
+  display: flex;
+  justify-content: center;
+  max-width: 100%;
+  margin-top: 4em;
+
+  img {
+    border-radius: 2em;
+    box-shadow: 10px 10px rgba(#dadada, 0.7);
+  }
+
+}
+
+
+.btn {
+  display: flex;
+  justify-content: center;
+  height: 4em;
+  width: 10%;
+  padding: 1.5em auto;
+  margin: 1em auto;
+  background-color: #333;
+  color: #f0f1ed;
+  border: none;
+  border-radius: 4px;
+  text-transform: uppercase;
+  letter-spacing: 0.5em;
+  transition: all 0.2s cubic-bezier(.4,0,.2,1);
+  a {
+    text-decoration: none;
+    color: #f0f1ed;
+  }
+
+  &:hover {
+    letter-spacing: 0.8em;
+    background-color: rgba(#e3dbdc, 0.85);
+    color: #333;
+
+  }
+
+}
+
+form {
+  text-align: center;
+  margin-top: 3em;
 }
