--- a/misael_mercado/week_05/day_02/minerals/app/views/rocks/home.html.erb
+++ b/misael_mercado/week_05/day_02/minerals/app/views/rocks/home.html.erb
@@ -1,5 +1,6 @@
 <div class="title"><h1>Welcome to the ugliest catalogue of Minerals and Rocks</h1></div>
 
-<div>
+<div class="content">
   <p>Please feel free to contribute to enrich the library</p>
 </div>
+<div class="feature"> <%= image_tag("mineral.jpg", :alt => "mineral") %></div>
