--- a/misael_mercado/week_05/day_02/minerals/app/views/rocks/index.html.erb
+++ b/misael_mercado/week_05/day_02/minerals/app/views/rocks/index.html.erb
@@ -1,7 +1,11 @@
-<div class="title"><h1>Minerals and Rocks Index</h1></div>
+<div class="title">
+  <h1>Minerals and Rocks Index</h1>
+</div>
 
 <% @rocks.each do |rock| %>
-  <p>
-    <%= link_to rock.name, rock_path(rock.id) %>
-  </p>
+  <div class="content">
+    <p>
+      <%= link_to rock.name, rock_path(rock.id) %>
+    </p>
+  </div>
 <% end %>
