--- a/misael_mercado/week_05/day_02/minerals/app/views/rocks/new.html.erb
+++ b/misael_mercado/week_05/day_02/minerals/app/views/rocks/new.html.erb
@@ -13,5 +13,5 @@
   <input type="number" name="composition" step=any>
   <label>Locality:</label>
   <input type="text" name="locality">
-  <button>Add Rock</button>
+  <button class="btn">Add Rock</button>
 </form>
