--- a/misael_mercado/week_05/day_02/minerals/app/views/rocks/show.html.erb
+++ b/misael_mercado/week_05/day_02/minerals/app/views/rocks/show.html.erb
@@ -1,15 +1,15 @@
-<h1><%= @rock.name %></h1>
+<div class="title"><h1><%= @rock.name %></h1></div>
 
-<%= image_tag @rock.image, :class => 'feature' unless @rock.image.nil? %>
+<div class="feature"> <%= image_tag @rock.image unless @rock.image.nil? %></div>
 
 <table>
   <thead>
     <tr>
-      <td>Name</td>
-      <td>Colour</td>
-      <td>Density</td>
-      <td>Composition</td>
-      <td>Locality</td>
+      <th>Name</th>
+      <th>Colour</th>
+      <th>Density</th>
+      <th>Composition</th>
+      <th>Locality</th>
     </tr>
   </thead>
 
@@ -25,6 +25,6 @@
 </table>
 
 <div class="controls">
-  <%= link_to 'Edit rock', rock_edit_path(@rock.id) %>
-  <%= button_to 'Delete rock', rock_path(@rock.id), :method => 'delete' %>
+  <button class="btn"><%= link_to 'Edit rock', rock_edit_path(@rock.id) %></button>
+  <%= button_to 'Delete rock', rock_path(@rock.id), :class => 'btn', :method => 'delete' %>
 </div>
