--- a/tim_caldwell/week_05/day_03/furever_home/app/views/shelters/_form.html.erb
+++ b/tim_caldwell/week_05/day_03/furever_home/app/views/shelters/_form.html.erb
@@ -9,7 +9,7 @@
   <%= f.text_field :type_name %>
 
   <%= f.label :image %>
-  <%= f.text_field :image %>
+  <%= f.url_field :image %>
 
   <%= f.submit %>
 <% end %>
