--- a/shelley_zhang/week_05/day_03/gamedev/app/views/developers/index.html.erb
+++ b/shelley_zhang/week_05/day_03/gamedev/app/views/developers/index.html.erb
@@ -1,4 +1,4 @@
-<h1>All Artists</h1>
+<h1>All Developers</h1>
 
 <% @developers.each do |developer| %>
   <%= image_tag developer.image, :alt => developer.name, :class => 'thumb' if developer.image.present? %>
