--- a/shelley_zhang/week_05/day_03/gamedev/app/views/layouts/application.html.erb
+++ b/shelley_zhang/week_05/day_03/gamedev/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Gamedev</title>
+    <title>Games and Developers</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -10,6 +10,14 @@
   </head>
 
   <body>
-    <%= yield %>
+    <div class="container">
+      <nav>
+        <%= link_to 'All Developers', developers_path %>
+        <%= link_to 'New Developer', new_developer_path %>
+        <%= link_to 'All Games', games_path %>
+        <%= link_to 'New Game', new_game_path %>
+      </nav>
+      <%= yield %>
+    </div>
   </body>
 </html>
