submitting rails hw final

--- a/shelley_zhang/week_05/day_03/gamedev/app/views/games/index.html.erb
+++ b/shelley_zhang/week_05/day_03/gamedev/app/views/games/index.html.erb
@@ -2,7 +2,7 @@
 
 <% @games.each do |game| %>
   <%= image_tag game.image, :alt => game.name, :class => 'thumb' if game.image.present? %>
-
-  <%= link_to game.name, game %>
-
+<ul>
+  <li><%= link_to game.name, game %></li>
+</ul>
 <% end %>
