doing pull upstream master thing

--- a/ej_willard/week_02/day_01/html-labs/busyhands/css/main.css
+++ b/ej_willard/week_02/day_01/html-labs/busyhands/css/main.css
@@ -110,6 +110,8 @@ a {
   border-left: 0.5px solid white;
   border-top: 0.5px solid lightgrey;
   border-right: 0.5px solid lightgrey;
+  /* border-style: inset;
+ border-width: 2px; */
 }
  .quote p {
   width: 600px;
@@ -145,6 +147,29 @@ a {
  }
 
  footer {
-   margin: -1.2em;
+   margin: -1.2em 0;
    background-color: #0c0c0c;
+   width: 960px;
+   height: 300px;
+   margin: 0;
+   padding: 5px;
+   display: flex;
+   flex-direction: row;
+   justify-content: space-around;
  }
+ footer h3 {
+   color: white;
+ }
+
+ footer a, p {
+   color: grey;
+ }
+
+ .column1 {
+   padding: 0 15px;
+
+ }
+
+.column2 {
+  padding:
+}
