--- a/ej_willard/week_04/day_05/artists_albums/public/css/master.css
+++ b/ej_willard/week_04/day_05/artists_albums/public/css/master.css
@@ -145,7 +145,9 @@ h1 {
 .album_info {
   grid-column-start: 2;
   grid-column-end: 2;
-  grid-template-rows: 3(repeat, 1fr);
+  /* display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: auto; */
   text-align: left;
   box-sizing: border-box;
 }
