--- a/ej_willard/week_02/day_02/matsumoto/css/hometown.css
+++ b/ej_willard/week_02/day_02/matsumoto/css/hometown.css
@@ -12,6 +12,19 @@ h1, h2, h3, h4, p {
   font-family: 'Roboto', sans-serif;
 }
 
+
+header h1, i {
+  color: #CF4B35;
+  font-size: 70px;
+}
+
+header h1 {
+  font-size: 7em;
+  padding: 0.3em 0 0 0;
+  margin: 0;
+  text-align: center;
+}
+
 header i {
   color: #CF4B35;
   font-size: 70px;
