--- a/ej_willard/week_02/day_02/matsumoto/css/style.css
+++ b/ej_willard/week_02/day_02/matsumoto/css/style.css
@@ -27,9 +27,47 @@ header h1 {
 header i {
   display:inline-block;
   text-align: center;
-  padding-left: 6.2em;
   margin-top: 0.3em;
   margin-bottom: 1.3em;
+}
+
+#headFade {
+  margin-top: 25px;
+   /* font-size: 21px; */
+   text-align: center;
+   -webkit-animation: fadein 3s; /* Safari, Chrome and Opera > 12.1 */
+      -moz-animation: fadein 3s; /* Firefox < 16 */
+       -ms-animation: fadein 3s; /* Internet Explorer */
+        -o-animation: fadein 3s; /* Opera < 12.1 */
+           animation: fadein 3s;
+}
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
 }
 
 .container {
@@ -86,27 +124,27 @@ nav a {
 }
 
 .box i:hover {
-  color: #B53C37;
+  color: #CE8D7C;
   transition: 1.5s;
 }
 
 .biography:hover {
-  color: #B53C37;
+  color: #CE8D7C;
   transition: 1.5s;
 }
 .hometown:hover {
-  color: #B53C37;
+  color: #CE8D7C;
   transition: 1.5s;
 }
 
 .media:hover {
-  color: #B53C37;
+  color: #CE8D7C;
   transition: 1.5s;
 }
 
 nav a:hover {
   transition: 1.5s;
-  color: #B53C37;
+  color: #CE8D7C;
 }
 
 p a {
