john broke something

--- a/misael_mercado/week_05/day_02/minerals/app/views/rocks/show.html.erb
+++ b/misael_mercado/week_05/day_02/minerals/app/views/rocks/show.html.erb
@@ -25,6 +25,6 @@
 </table>
 
 <div class="controls">
-  <button class="btn"><%= link_to 'Edit rock', rock_edit_path(@rock.id) %></button>
+  <%= button_to 'Edit rock', rock_edit_path(@rock.id), :class => "btn", :method => "get"%>
   <%= button_to 'Delete rock', rock_path(@rock.id), :class => 'btn', :method => 'delete' %>
 </div>
