john broke something

--- a/sherine_foo/week_05/day_03/movie_directors/app/views/directors/index.html.erb
+++ b/sherine_foo/week_05/day_03/movie_directors/app/views/directors/index.html.erb
@@ -7,7 +7,7 @@
     <li><%= director.nationality  %></li>
 
     <% if director.dob.present? %>
-    <li><%= director.dob %></li>
+    <li><%= director.dob.strftime '%A, %B %e, %Y' %></li>
         <!-- .strftime '%A, %B %e, %Y' -->
     <% end %>
 
