--- a/sherine_foo/week_05/day_03/movie_directors/app/views/movies/_form.html.erb
+++ b/sherine_foo/week_05/day_03/movie_directors/app/views/movies/_form.html.erb
@@ -7,13 +7,13 @@
   <%= f.text_field :genre %>
 
   <%= f.label :rating %>
-  <%= f.interger_field :rating %>
+  <%= f.text_field :rating %>
 
   <%= f.label :image %>
   <%= f.url_field :image %>
 
   <%= f.label :director_id %>
-  <%= f.select :director_id, Director.pluck(:name, :id), include_blank => true %>
+  <%= f.select :director_id, Director.pluck(:name, :id), :include_blank => true %>
 
 
   <%= f.submit %>
