--- a/sherine_foo/week_05/day_03/movie_directors/app/views/movies/index.html.erb
+++ b/sherine_foo/week_05/day_03/movie_directors/app/views/movies/index.html.erb
@@ -1,7 +1,7 @@
 <h1>All Movies</h1>
 
 <%= @movies.each do |movie| %>
-<%= link_to image_tag(movie.image, :class => 'thumb'), movie %>
+<%= link_to image_tag(movie.image, :class => 'thumb'), movie if movie.image.present? %>
 
   <ul>
     <li><%= link_to movie.title, movie  %></li>
